--- a/frontend/src/main/frontend/src/app/person.component.html
+++ b/frontend/src/main/frontend/src/app/person.component.html
@@ -2,17 +2,16 @@
 <section class="todoapp">
 
 	<header class="header">
-		<h1>Person</h1>
+		<h1>Person List</h1>
 	</header>
 
 	<!-- This section should be hidden by default and shown when there are todos -->
 	<section class="main">
-		<label for="toggle-all">Mark all as complete</label>
 		<ul class="todo-list">
 			<li *ngFor="let person of persons">
 				<span>
-          {{person.firstName}}
-          {{person.lastName}}
+          {{person.firstname}}
+          {{person.lastname}}
 				</span>
 			</li>
 		</ul>
@@ -20,16 +19,12 @@
 
 	<!-- This footer should hidden by default and shown when there are todos -->
 	<footer class="footer">
-		<!-- This should be `0 items left` by default -->
-		<span class="todo-count"><strong>0</strong> item left</span>
-		<!-- Remove this if you don't implement routing -->
-		<ul class="filters">
-			<li><a class="selected" href="#/">All</a></li>
-			<li><a href="#/active">Active</a></li>
-			<li><a href="#/completed">Completed</a></li>
-		</ul>
-		<!-- Hidden if no completed items are left ↓ -->
-		<button class="clear-completed">Clear completed</button>
+  <!-- add paging and filter -->
 	</footer>
 
+<input placeholder="firstName"
+       [(ngModel)]="newFirstname"
+       (keyup.enter)="addPerson()"
+       autofocus>
+       
 </section>
