--- a/frontend/src/main/frontend/src/app/user.component.html
+++ b/frontend/src/main/frontend/src/app/user.component.html
@@ -27,4 +27,9 @@
        (keyup.enter)="addUser()"
        autofocus>
 
+<input placeholder="email"
+       [(ngModel)]="newEmail"
+       (keyup.enter)="addUser()"
+       autofocus>
+
 </section>
