--- a/frontend/src/main/frontend/src/app/app.component.html
+++ b/frontend/src/main/frontend/src/app/app.component.html
@@ -1,3 +1,12 @@
 <h1>
   {{title}}
 </h1>
+
+<p><a [routerLink]="['/home']">Home</a></p>
+<p><a [routerLink]="['/login']">Login</a></p>
+<p><a [routerLink]="['/user']">User</a></p>
+
+
+<!-- the routed components end up here, emits activation and deactivation events -->
+<router-outlet></router-outlet>
+
