--- a/frontend/src/main/frontend/src/app/login/login.component.html
+++ b/frontend/src/main/frontend/src/app/login/login.component.html
@@ -1,6 +1,5 @@
 <div class="col-md-6 col-md-offset-3">
-  <h1>Hi</h1>
+  <h1>Login page</h1>
   <p>You're logged in with Angular 2!!</p>
   <h3>All registered users:</h3>
-  <p><a [routerLink]="['/login']">Logout</a></p>
 </div>
