--- a/frontend/src/main/frontend/src/app/app.component.html
+++ b/frontend/src/main/frontend/src/app/app.component.html
@@ -5,6 +5,7 @@
 <p><a [routerLink]="['/home']">Home</a></p>
 <p><a [routerLink]="['/login']">Login</a></p>
 <p><a [routerLink]="['/user']">User</a></p>
+<p><a [routerLink]="['/register']">Register</a></p>
 
 
 <!-- the routed components end up here, emits activation and deactivation events -->
