--- a/frontend/src/main/frontend/src/app/home/home.component.html
+++ b/frontend/src/main/frontend/src/app/home/home.component.html
@@ -1,5 +1,6 @@
-<div class="col-md-6 col-md-offset-3">
-  <h1>Hi</h1>
-  <p>You're logged in with Angular 2!!</p>
+<header class="header">
+  <h3>Home</h3>
+</header>
+
+<p>You're logged in with Angular 2!!</p>
   <h3>All registered users:</h3>
-</div>
