--- a/frontend/src/main/frontend/src/app/app.component.html
+++ b/frontend/src/main/frontend/src/app/app.component.html
@@ -1,11 +1,44 @@
-<div class="page-header">
-    <h1>{{title}}</h1>
-</div>
-<nav>
-<a class="btn btn-default" role="button" [routerLink]="['/home']">Home</a>
-<a class="btn btn-default" role="button" [routerLink]="['/login']">Login</a>
-<a class="btn btn-default" role="button" [routerLink]="['/user']">User</a>
-<a class="btn btn-default" role="button" [routerLink]="['/register']">Register</a>
-</nav>
-<router-outlet></router-outlet>
+<!-- this is the start of the body inner html-->
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">{{title}}</a>
+    </div>
 
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a class="nav-link" [routerLink]="['/home']">Home</a></li>
+        <li><a class="nav-link" [routerLink]="['/login']">Login</a></li>
+        <li><a class="nav-link" [routerLink]="['/user']">User</a></li>
+        <li><a class="nav-link" [routerLink]="['/register']">Register</a></li>
+      </ul>
+      <form class="navbar-form navbar-right">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Help</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+<!-- Begin page content -->
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
+<div id="footer">
+  <div class="container">
+    <p class="footer-block">Footer</p>
+  </div>
+</div>
+<!-- end of body inner html -->
