--- a/frontend/src/main/frontend/src/app/register/register.component.html
+++ b/frontend/src/main/frontend/src/app/register/register.component.html
@@ -2,34 +2,37 @@
   <h3>Register</h3>
 </header>
 
-<form class="form-horizontal" action='' method="POST">
-  <fieldset>
-    <div class="control-group">
-      <!-- Username -->
-      <label class="control-label"  for="username">Username</label>
-      <div class="controls">
-        <input type="text" id="username" name="username" placeholder="" class="input-xlarge">
-        <p class="help-block">Username can contain any letters or numbers, without spaces</p>
-      </div>
-    </div>
 
-    <div class="control-group">
-      <!-- E-mail -->
-      <label class="control-label" for="email">E-mail</label>
-      <div class="controls">
-        <input type="text" id="email" name="email" placeholder="" class="input-xlarge">
-        <p class="help-block">Please provide your E-mail</p>
-      </div>
+<fieldset>
+  <div class="control-group">
+    <!-- Login -->
+    <label class="control-label"  for="username">Login</label>
+    <div class="controls">
+      <input type="text" id="username" name="username" placeholder="username" class="input-xlarge"
+             [(ngModel)]="newLogin">
+      <p class="help-block">Username can contain any letters or numbers, without spaces</p>
     </div>
+  </div>
 
-    <div class="control-group">
-      <!-- Password-->
-      <label class="control-label" for="password">Password</label>
-      <div class="controls">
-        <input type="password" id="password" name="password" placeholder="" class="input-xlarge">
-        <p class="help-block">Password should be at least 4 characters</p>
-      </div>
+  <div class="control-group">
+    <!-- E-mail -->
+    <label class="control-label" for="email">E-mail</label>
+    <div class="controls">
+      <input type="text" id="email" name="email" placeholder="mail@host" class="input-xlarge"
+             [(ngModel)]="newEmail">
+      <p class="help-block">Please provide your E-mail</p>
     </div>
+  </div>
+
+  <div class="control-group">
+    <!-- Password-->
+    <label class="control-label" for="password">Password</label>
+    <div class="controls">
+      <input type="password" id="password" name="password" placeholder="" class="input-xlarge"
+             [(ngModel)]="newPassword">
+      <p class="help-block">Password should be at least 4 characters</p>
+    </div>
+  </div>
 
     <div class="control-group">
       <!-- Password -->
