--- a/frontend/src/main/frontend/src/app/register/register.component.html
+++ b/frontend/src/main/frontend/src/app/register/register.component.html
@@ -4,6 +4,7 @@
 
 
 <fieldset>
+
   <div class="control-group">
     <!-- Login -->
     <label class="control-label"  for="username">Login</label>
@@ -15,7 +16,7 @@
   </div>
 
   <div class="control-group">
-    <!-- E-mail -->
+    <!-- Email -->
     <label class="control-label" for="email">E-mail</label>
     <div class="controls">
       <input type="text" id="email" name="email" placeholder="mail@host" class="input-xlarge"
@@ -34,20 +35,21 @@
     </div>
   </div>
 
-    <div class="control-group">
-      <!-- Password -->
-      <label class="control-label"  for="password_confirm">Password (Confirm)</label>
-      <div class="controls">
-        <input type="password" id="password_confirm" name="password_confirm" placeholder="" class="input-xlarge">
-        <p class="help-block">Please confirm password</p>
-      </div>
+  <div class="control-group">
+    <!-- Password confirm -->
+    <label class="control-label"  for="password_confirm">Password (Confirm)</label>
+    <div class="controls">
+      <input type="password" id="password_confirm" name="password_confirm" placeholder="" class="input-xlarge">
+      <p class="help-block">Please confirm password</p>
     </div>
+  </div>
 
-    <div class="control-group">
-      <!-- Button -->
-      <div class="controls">
-        <button class="btn btn-success">Register</button>
-      </div>
+  <div class="control-group">
+    <!-- Button -->
+    <div class="controls">
+      <button class="btn btn-success" ng-click="register()">Register</button>
     </div>
-  </fieldset>
-</form>
+  </div>
+
+</fieldset>
+
