--- a/frontend/src/main/frontend/src/app/register/register.component.html
+++ b/frontend/src/main/frontend/src/app/register/register.component.html
@@ -3,8 +3,6 @@
 </header>
 
 
-<fieldset>
-
   <div class="control-group">
     <!-- Login -->
     <label class="control-label"  for="username">Login</label>
@@ -47,9 +45,8 @@
   <div class="control-group">
     <!-- Button -->
     <div class="controls">
-      <button class="btn btn-success" ng-click="register()">Register</button>
+      <input class="btn btn-primary" (ng-click)="register()" value="Register">
     </div>
   </div>
 
-</fieldset>
 
