--- a/frontend/src/main/frontend/src/app/app.component.html
+++ b/frontend/src/main/frontend/src/app/app.component.html
@@ -1,8 +1,9 @@
-<!-- this is the start of the body inner html-->
+<!-- this is the start of the body inner html as configured in index.html -->
 <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+  <!-- title property from the AppComponent class-->
   <a class="navbar-brand" href="#">{{title}}</a>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
