--- a/frontend/src/main/frontend/src/app/login/login.component.html
+++ b/frontend/src/main/frontend/src/app/login/login.component.html
@@ -6,6 +6,9 @@
   <div>
     With Facebook: <a href="/mercury/login/facebook">click here</a>
   </div>
+  <div>
+    With Github: <a href="/mercury/login/github">click here</a>
+  </div>
 </div>
 
 <form [formGroup]="form" (ngSubmit)="login()">
